--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,14 @@
-title: Hello, world! I'm David Freeman
+title: Tampin Blood Bank
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Official site for Tampin Blood Bank
 permalink: ':title/'
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://tampinbloodbank.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
-author-img: david-freeman.jpg # add your photo
+author: Tampin Blood Bank # add your name
+author-img: tampinbloodbank.png # add your photo
 about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
